Added message field to historical model and override create_historical_record method than it fill message field

--- a/compose/django/dockerfile
+++ b/compose/django/dockerfile
@@ -7,6 +7,7 @@ WORKDIR /code
 
 RUN python -m pip install --upgrade pip
 
+ADD requirements/ /code/requirements/
 ADD req.txt /code/
 
 RUN pip install -r req.txt
