--- a/compose/django/dockerfile
+++ b/compose/django/dockerfile
@@ -12,4 +12,8 @@ ADD req.txt /code/
 
 RUN pip install -r req.txt
 
+COPY ./compose/django/start-dev.sh /start-dev.sh
+RUN sed -i 's/\r//' /start-dev.sh
+RUN chmod +x /start-dev.sh
+
 ADD . /code/
